usethis::use_package("devtools", type = "Suggests")

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 URL: https://jabenninghoff.github.io/workshop7/, https://github.com/jabenninghoff/workshop7
 BugReports: https://github.com/jabenninghoff/workshop7/issues
+Suggests: 
+    devtools
