--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,18 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
-.Rproj.user
+
+# macOS
+.DS_Store
+*.swp
+
+# analysis package generated files
+# see: https://jabenninghoff.github.io/rdev/articles/analysis-package-layout.html
+analysis/*.docx
+analysis/*.html
+analysis/*.md
+analysis/*.pdf
+analysis/*-figure/
+analysis/import/
+analysis/rendered/
+pkgdown/_pkgdown.yml
