--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,6 +1,12 @@
-^renv$
-^renv\.lock$
-^workshop7\.Rproj$
+^\.github$
+^\.lintr$
 ^\.Rproj\.user$
+^analysis$
+^docs$
 ^LICENSE\.md$
+^pkgdown$
 ^README\.Rmd$
+^renv\.lock$
+^renv$
+^TODO\.md$
+^workshop7\.Rproj$
