--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person("John", "Benninghoff", , "jbenninghoff@mac.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-6230-4742"))
 Description: Analysis package for SRA 2021 Workshop 7: Monte Carlo simulation and
-    probability bounds analysis in R with hardly any data
+    probability bounds analysis in R with hardly any data.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
