--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,7 +1,13 @@
 ^\.github$
 ^\.lintr$
 ^\.Rproj\.user$
-^analysis$
+^analysis/.*-figure$
+^analysis/.*\.docx$
+^analysis/.*\.html$
+^analysis/.*\.md$
+^analysis/.*\.pdf$
+^analysis/import$
+^analysis/rendered$
 ^docs$
 ^LICENSE\.md$
 ^pkgdown$
