--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,11 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Suggests: 
+    desc,
+    dplyr,
+    fs,
+    purrr,
+    rmarkdown,
     devtools,
     rdev (>= 0.4.2)
 Remotes:  
