--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,8 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Suggests: 
+    MASS,
+    sn,
     desc,
     dplyr,
     fs,
