--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,9 @@ Suggests:
     rmarkdown,
     devtools,
     rdev (>= 0.8.9),
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    spelling
 Remotes: 
     jabenninghoff/rdev
 Config/testthat/edition: 3
+Language: en-US
