--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,8 @@ Suggests:
     devtools,
     rdev (>= 0.8.9),
     testthat (>= 3.0.0),
-    spelling
+    spelling,
+    pkgdown
 Remotes: 
     jabenninghoff/rdev
 Config/testthat/edition: 3
