--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Suggests:
     fs,
     MASS,
     pkgdown,
+    pkgload,
     purrr,
     rdev,
     rmarkdown,
@@ -30,4 +31,4 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
