--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
 Description: Analysis package for SRA 2021 Workshop 7: Monte Carlo
     simulation and probability bounds analysis in R with hardly any data.
 License: MIT + file LICENSE
-URL: https://jabenninghoff.github.io/workshop7,
+URL: https://jabenninghoff.github.io/workshop7/,
     https://github.com/jabenninghoff/workshop7
 BugReports: https://github.com/jabenninghoff/workshop7/issues
 Suggests: 
