--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ Suggests:
     devtools,
     dplyr,
     fs,
+    knitr,
     MASS,
     pkgdown,
     pkgload,
@@ -31,4 +32,4 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.3
