--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,8 @@
-pandoc: '2.18'
-pkgdown: 2.0.4
+pandoc: 2.19.2
+pkgdown: 2.0.7
 pkgdown_sha: ~
 articles: {}
-last_built: 2022-06-22T03:06Z
+last_built: 2023-01-22T15:53Z
 urls:
   reference: https://jabenninghoff.github.io/workshop7/reference
   article: https://jabenninghoff.github.io/workshop7/articles
