build_analysis_site() for release 1.1.1

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,8 @@
 url: https://jabenninghoff.github.io/workshop7/
 template:
   bootstrap: 5
+  bslib:
+    preset: bootstrap
 navbar:
   structure:
     left:
